further fix homepage on narrow screens

--- a/ui/lobby/css/_table.scss
+++ b/ui/lobby/css/_table.scss
@@ -38,4 +38,10 @@
       }
     }
   }
+
+  .lobby__tournaments-simuls .timeago {
+    @media (max-width: at-most($x-small)) {
+      display: none;
+    }
+  }
 }
